<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/price_cv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/primary_margin"
                android:layout_weight="1"
                android:padding="8dp"
                app:cardBackgroundColor="@color/blueGray"
                app:layout_constraintBottom_toTopOf="@id/high_cv"
                app:layout_constraintEnd_toStartOf="@id/market_cap_cv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chart">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/price_text_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/primary_margin"
                        android:layout_marginStart="@dimen/primary_margin"
                        android:layout_marginTop="8dp"
                        android:text="@string/price_text"
                        android:textSize="@dimen/medium_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/price_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/primary_margin"
                        android:layout_marginStart="@dimen/primary_margin"
                        android:layout_marginTop="@dimen/primary_margin"
                        android:text="@string/price_value"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/price_text_tv" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/high_cv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/primary_margin"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/blueGray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/low_cv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_cv">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/high_text_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/primary_margin"
                        android:layout_marginStart="@dimen/primary_margin"
                        android:layout_marginTop="8dp"
                        android:text="@string/high_text"
                        android:textSize="@dimen/medium_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/high_value_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/primary_margin"
                        android:layout_marginStart="@dimen/primary_margin"
                        android:layout_marginTop="@dimen/primary_margin"
                        android:text="@string/high_value"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/high_text_tv" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/market_cap_cv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/primary_margin"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/blueGray"
                app:layout_constraintBottom_toTopOf="@id/low_cv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/price_cv"
                app:layout_constraintTop_toBottomOf="@+id/chart"
                app:layout_constraintVertical_bias="1">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/market_cap_text_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/primary_margin"
                        android:layout_marginStart="@dimen/primary_margin"
                        android:layout_marginTop="8dp"
                        android:text="@string/market_cap_text"
                        android:textSize="@dimen/medium_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/market_cap_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/primary_margin"
                        android:layout_marginStart="@dimen/primary_margin"
                        android:layout_marginTop="@dimen/primary_margin"
                        android:text="@string/market_cap_value"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/market_cap_text_tv" />
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/low_cv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/primary_margin"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/blueGray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/high_cv"
                app:layout_constraintTop_toBottomOf="@+id/market_cap_cv">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/low_text_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/primary_margin"
                        android:layout_marginStart="@dimen/primary_margin"
                        android:layout_marginTop="8dp"
                        android:text="@string/low_text"
                        android:textSize="@dimen/medium_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/low_value_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/primary_margin"
                        android:layout_marginStart="@dimen/primary_margin"
                        android:layout_marginTop="@dimen/primary_margin"
                        android:text="@string/low_value"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/low_text_tv" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>

    <com.github.mikephil.charting.charts.CandleStickChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/chart_view_height"
        android:layout_margin="@dimen/primary_margin"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

</android.support.constraint.ConstraintLayout>